[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/SettingsDialog.gd" id="1"]

[node name="SettingsDialog" type="Window"]
title = "World Settings"
size = Vector2i(420, 520)
exclusive = true
initial_position = 1
visible = false
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0
theme_override_constants/separation = 8


[node name="Tabs" type="TabContainer" parent="VBox"]

[node name="General" type="VBoxContainer" parent="VBox/Tabs"]

[node name="Grid" type="GridContainer" parent="VBox/Tabs/General"]
columns = 2

[node name="LabelWidth" type="Label" parent="VBox/Tabs/General/Grid"]
text = "Width"

[node name="Width" type="SpinBox" parent="VBox/Tabs/General/Grid"]
min_value = 40.0
max_value = 400.0
step = 1.0
value = 275.0

[node name="LabelHeight" type="Label" parent="VBox/Tabs/General/Grid"]
text = "Height"

[node name="Height" type="SpinBox" parent="VBox/Tabs/General/Grid"]
min_value = 20.0
max_value = 200.0
step = 1.0
value = 62.0

[node name="Continents" type="VBoxContainer" parent="VBox/Tabs"]

[node name="Grid" type="GridContainer" parent="VBox/Tabs/Continents"]
columns = 2

[node name="LabelOctaves" type="Label" parent="VBox/Tabs/Continents/Grid"]
text = "Octaves"

[node name="Octaves" type="SpinBox" parent="VBox/Tabs/Continents/Grid"]
min_value = 1.0
max_value = 10.0
step = 1.0
value = 5.0

[node name="LabelFrequency" type="Label" parent="VBox/Tabs/Continents/Grid"]
text = "Base Frequency"

[node name="Frequency" type="SpinBox" parent="VBox/Tabs/Continents/Grid"]
min_value = 0.001
max_value = 0.2
step = 0.001
value = 0.02

[node name="LabelLacunarity" type="Label" parent="VBox/Tabs/Continents/Grid"]
text = "Lacunarity"

[node name="Lacunarity" type="SpinBox" parent="VBox/Tabs/Continents/Grid"]
min_value = 1.1
max_value = 4.0
step = 0.05
value = 2.0

[node name="LabelGain" type="Label" parent="VBox/Tabs/Continents/Grid"]
text = "Gain"

[node name="Gain" type="SpinBox" parent="VBox/Tabs/Continents/Grid"]
min_value = 0.1
max_value = 1.0
step = 0.05
value = 0.5

[node name="LabelWarp" type="Label" parent="VBox/Tabs/Continents/Grid"]
text = "Domain Warp Amp"

[node name="Warp" type="SpinBox" parent="VBox/Tabs/Continents/Grid"]
min_value = 0.0
max_value = 80.0
step = 1.0
value = 24.0

[node name="Ocean" type="VBoxContainer" parent="VBox/Tabs"]

[node name="Grid" type="GridContainer" parent="VBox/Tabs/Ocean"]
columns = 2

[node name="LabelSea" type="Label" parent="VBox/Tabs/Ocean/Grid"]
text = "Sea Level"

[node name="SeaLevel" type="SpinBox" parent="VBox/Tabs/Ocean/Grid"]
min_value = -1.0
max_value = 1.0
step = 0.01
value = 0.0

[node name="LabelShallow" type="Label" parent="VBox/Tabs/Ocean/Grid"]
text = "Shallow Thresh"

[node name="ShallowThreshold" type="SpinBox" parent="VBox/Tabs/Ocean/Grid"]
min_value = 0.05
max_value = 0.6
step = 0.01
value = 0.20

[node name="LabelShoreBand" type="Label" parent="VBox/Tabs/Ocean/Grid"]
text = "Shore Band"

[node name="ShoreBand" type="SpinBox" parent="VBox/Tabs/Ocean/Grid"]
min_value = 1.0
max_value = 20.0
step = 0.5
value = 6.0

[node name="LabelShoreNoiseMul" type="Label" parent="VBox/Tabs/Ocean/Grid"]
text = "Shore Noise Mult"

[node name="ShoreNoiseMult" type="SpinBox" parent="VBox/Tabs/Ocean/Grid"]
min_value = 0.1
max_value = 20.0
step = 0.1
value = 4.0

[node name="Climate" type="VBoxContainer" parent="VBox/Tabs"]

[node name="Grid" type="GridContainer" parent="VBox/Tabs/Climate"]
columns = 2

[node name="LabelPolarCap" type="Label" parent="VBox/Tabs/Climate/Grid"]
text = "Polar Cap Frac"

[node name="PolarCapFrac" type="SpinBox" parent="VBox/Tabs/Climate/Grid"]
min_value = 0.0
max_value = 0.5
step = 0.01
value = 0.12

[node name="Rivers" type="VBoxContainer" parent="VBox/Tabs"]

[node name="Grid" type="GridContainer" parent="VBox/Tabs/Rivers"]
columns = 2

[node name="RiverEnabledLabel" type="Label" parent="VBox/Tabs/Rivers/Grid"]
text = "Enable Rivers"

[node name="RiverEnabled" type="CheckBox" parent="VBox/Tabs/Rivers/Grid"]
button_pressed = true
text = "Enabled"

[node name="LabelRiverDrops" type="Label" parent="VBox/Tabs/Rivers/Grid"]
text = "Droplets Factor"

[node name="RiverDropletsFactor" type="SpinBox" parent="VBox/Tabs/Rivers/Grid"]
min_value = 0.0
max_value = 2.0
step = 0.05
value = 0.20

[node name="LabelRiverThresh" type="Label" parent="VBox/Tabs/Rivers/Grid"]
text = "Threshold Factor"

[node name="RiverThresholdFactor" type="SpinBox" parent="VBox/Tabs/Rivers/Grid"]
min_value = 0.1
max_value = 5.0
step = 0.05
value = 1.50

[node name="LabelRiverErode" type="Label" parent="VBox/Tabs/Rivers/Grid"]
text = "Erosion Strength"

[node name="RiverErosion" type="SpinBox" parent="VBox/Tabs/Rivers/Grid"]
min_value = 0.0
max_value = 0.01
step = 0.0001
value = 0.0005

[node name="LabelRiverMinH" type="Label" parent="VBox/Tabs/Rivers/Grid"]
text = "Min Start Height"

[node name="RiverMinStartHeight" type="SpinBox" parent="VBox/Tabs/Rivers/Grid"]
min_value = -1.0
max_value = 1.0
step = 0.01
value = 0.02

[node name="LabelRiverPolar" type="Label" parent="VBox/Tabs/Rivers/Grid"]
text = "Polar Cutoff (0..1)"

[node name="RiverPolarCutoff" type="SpinBox" parent="VBox/Tabs/Rivers/Grid"]
min_value = 0.0
max_value = 1.0
step = 0.01
value = 0.80

[node name="LabelRiverDelta" type="Label" parent="VBox/Tabs/Rivers/Grid"]
text = "River Delta Widening"

[node name="RiverDeltaWidening" type="CheckBox" parent="VBox/Tabs/Rivers/Grid"]
button_pressed = true

[node name="Buttons" type="HBoxContainer" parent="VBox"]
alignment = 2

[node name="Apply" type="Button" parent="VBox/Buttons"]
text = "Apply"

[node name="Close" type="Button" parent="VBox/Buttons"]
text = "Close"


